<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RSCov</string>

    <string name="THE_MAPS_API">Your API Key</string>

    <!--    GLOBAL STRING ASSET-->
    <string name="null_text" translatable="false">null</string>
    <string name="loading_text" tools:ignore="TypographyEllipsis">Memuat...</string>

    <string name="menu_home">Beranda</string>
    <string name="menu_stats">Informasi</string>
    <string name="menu_maps">Peta Sebaran</string>
    <string name="menu_info">Tentang</string>

    <!--    PROVINCE LAYOUT STRING ASSET-->
    <string name="prov_layout_search" tools:ignore="TypographyEllipsis">Cari provinsi ...</string>

    <!--    FRAGMENT MAPS STRING ASSET-->
    <string name="maps_title">Kasus Per Provinsi</string>


    <!--    INFO WINDOW PROV STRING ASSET-->
    <string name="info_window_prov_cases">"Kasus: "</string>
    <string name="info_window_prov_death">"Meninggal: "</string>
    <string name="info_window_prov_cured">"Sembuh: "</string>
    <string name="info_window_prov_treated">"Dirawat: "</string>
    <string name="info_window_prov_subtitle">Dari seluruh kasus di Indonesia</string>
    <string name="info_window_prov_subtitle2">Data Kasus Berdasarkan:</string>
    <string name="info_window_prov_sex">Jenis Kelamin:</string>
    <string name="info_window_prov_age">Umur:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello home fragment</string>
    <string name="hello_info_fragment_framelayout">hello_info_fragment</string>
    <string name="hello_stats_fragment">hello stats fragment</string>
    <string name="rs_rujukan_covid_19">Tempat Isolasi Pasien COVID-19</string>
    <string name="periksa_sekarang">Periksa sekarang</string>
    <string name="website">Website</string>
    <string name="telepon">Telepon</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="lawan_covid_19">Lawan COVID-19</string>
    <string name="kasus_indonesia">Kasus Indonesia</string>
    <string name="berita">Berita</string>

    <!--    BOTTOM SHEET DONATE REDIRECT ASSET-->
    <string name="donate_desc">Bantu mereka yang terdampak pandemi COVID-19 dengan berdonasi melalui platform kitabisa.com</string>
    <string name="donate_footer1">Segala hak diserahkan penuh kepada kitabisa.com</string>
    <string name="donate_footer2" translatable="false">© kitabisa.com</string>
    <string name="home_donate_desc">Ulurkan tanganmu untuk mereka yang terdampak oleh pandemi ini</string>

    <!--    WEB VIEW STRING ASSET-->
    <string name="web_view_loading_page" tools:ignore="TypographyEllipsis">Laman sedang dimuat...</string>

    <!--    BOTTOM SHEET PRIXA REDIRECT ASSET-->
    <string name="prixa_title">Anda akan dialihkan ke</string>
    <string name="prixa_desc">Sistem kecerdasan buatan yang Prixa.ai sediakan akan mendeteksi gejala covid-19 yang mungkin kamu alami.</string>
    <string name="prixa_footer1">Segala hak diserahkan penuh kepada Prixa.ai</string>
    <string name="prixa_footer2" translatable="false">© prixa.ai</string>
    <string name="home_test_desc">Ikuti langkah-langkah sesuai dengan instruksi</string>
    <string name="rumah_sakit_isolasi_pasien">Rumah Sakit Isolasi Pasien</string>
    <string name="covid_19">COVID-19</string>
    <string name="string_covid_19">COVID-19</string>
    <string name="provinsi_lampung">Provinsi Lampung</string>

</resources>