<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/prov_list_layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/prov_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/null_text"
            android:textColor="@color/black"
            android:fontFamily="@font/opensanssemibold"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/info_window_prov_cases"
                    android:textColor="@color/gray700"
                    android:fontFamily="@font/opensanssemibold"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/prov_case"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="7dp"
                    android:gravity="start"
                    android:text="@string/null_text"
                    android:textColor="@color/gray700"
                    android:fontFamily="@font/opensansregular"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="29dp"
                    android:gravity="start"
                    android:text="@string/info_window_prov_death"
                    android:textColor="@color/gray700"
                    android:fontFamily="@font/opensanssemibold"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/prov_death"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="7dp"
                    android:gravity="start"
                    android:text="@string/null_text"
                    android:textColor="@color/gray700"
                    android:fontFamily="@font/opensansregular"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/info_window_prov_cured"
                    android:textColor="@color/gray700"
                    android:fontFamily="@font/opensanssemibold"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/prov_cured"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="7dp"
                    android:gravity="start"
                    android:text="@string/null_text"
                    android:textColor="@color/gray700"
                    android:fontFamily="@font/opensansregular"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="start"
                    android:text="@string/info_window_prov_treated"
                    android:textColor="@color/gray700"
                    android:fontFamily="@font/opensanssemibold"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/prov_treated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="7dp"
                    android:gravity="start"
                    android:text="@string/null_text"
                    android:textColor="@color/gray700"
                    android:fontFamily="@font/opensansregular"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/horizontal_divider"/>

</LinearLayout>